<resources>
    <string name="app_name">Uso del Dinero</string>
    <string name="valid_currency_shared_preferences_file_name">VALID_CURRENCY</string>
    <string name="currency_in_wallet_shared_preferences_file_name">CURRENCY_IN_WALLET</string>
    <string name="settings_shared_preferences_file_name">SETTINGS</string>
    <string name="empty_string"></string>
    <string name="insufficient_funds">DINERO INSUFICIENTE PARA AGREGAR ESTE PRODUCTO</string>
    <string name="change_OK"> - VUELTO CORRECTO</string>
    <string name="help_text_control_change">AYUDA:\n[VUELTO TOTAL] Indica el todo el vuelto recibido.\n[Imágenes de billetes y monedas] Se muestran todos los valores para seleccionar el vuelto que se recibe.\n[AGREGAR VUELTO] Agrega el valor mostrado en imagen al vuelto y lo suma al acumulado.\n[ACEPTAR VUELTO] Confirma la recepción del vuelto y envía a la pantalla de finalización.</string>
    <string name="tag_total_value">valor_total</string>
    <string name="received_change">vuelto_recibido</string>
    <string name="tag_money_value_name">nombre_valor_moneda</string>
    <string name="tag_drawable">drawable</string>
    <string name="tag_question_mark">question_mark</string>
    <string name="help_text_wallet">aaa</string>
    <string name="value_selected_for_load">Valor seleccionado para cargar: $</string>
    <string name="value_saved">Carga agregada a la billetera</string>
    <string name="help_text_pay_purchase">AYUDA:\n[Imágenes de billetes y monedas] Se muestran todos los valores a retirar de la billetera para el pago.\n[CANCELAR COMPRA] Anula la carga y vuelve a la vista de la billetera.\n[COMPRA PAGADA] Confirma el pago y envía a la pantalla de recepción de vuelto (si es necesario).</string>
    <string name="type_1">t1</string>
    <string name="type_2">t2</string>
    <string name="first_time_access">firstTimeAccess</string>
    <string name="finalize_purchase">Finalizar Compra</string>
    <string name="no_change_received">Compra sin vuelto</string>
    <string name="select_app">Seleccione la Aplicación</string>
    <string name="error_img_not_found">ERROR: IMAGEN NO ENCONTRADA</string>
    <string name="error_img_not_selected">ERROR: IMAGEN NO SELECCIONADA</string>
    <string name="enter_value">INGRESE VALOR</string>
    <string name="error_value_not_selected">ERROR: VALOR NO SELECCIONADO</string>
    <string name="msg_value_saved">NUEVO VALOR GUARDADO</string>
    <string name="help_text_new_currency">AYUDA:\n[BILLETE/MONEDA] Se elige el tipo de valor.\n[CARGAR IMAGEN] Selecciona la imagen para el nuevo valor.\n[VALOR ASIGNADO] Se asigna el importe al nuevo valor.\n[SALIR] Vuelve a la pantalla principal.\n[GUARDAR NUEVO VALOR] Guarda el nuevo valor en la aplicación.</string>
    <string name="question_save_new_value">¿GUARDAR NUEVO VALOR?</string>
    <string name="value_selected">VALOR SELECCIONADO: $</string>
    <string name="msg_value_deleted">VALOR ELIMINADO</string>
    <string name="error_on_file_delete">ERROR AL ELIMINAR EL VALOR</string>
    <string name="help_text_delete_currency">AYUDA:\n[SALIR] Vuelve a la pantalla principal.\n[SELECCIONAR] Selecciona el valor a eliminar.\n[CONFIRMAR ELIMINADO] Borra el valor seleccionado.\n***NOTA***: Si existían billetes/monedas en la billetera del valor que se está borrando, los mismos también serán retirados. </string>
    <string name="error_on_file_delete_last_value">ERROR AL ELIMINAR: ÉSTE ES EL ÚLTIMO VALOR, EL MISMO NO PUEDE SER ELIMINADO.</string>
    <string name="question_delete_value_selected">¿BORRAR EL VALOR SELECCIONADO?</string>
    <string name="delete_value">BORRAR</string>
    <string name="title_version_information">SELECCIONADO: $</string>
    <string name="msg_version_information">Uso del Dinero\nVersión 0.7.0\n\nProyecto DANE</string>
    <string name="buy">COMPRAR</string>
    <string name="product_price">PRECIO DEL PRODUCTO: $</string>
    <string name="add_product">AGREGAR</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="decimal_separator">.</string>
    <string name="erase_number">c</string>
    <string name="value_money_zero">0.00</string>
    <string name="pay_purchase">PAGAR COMPRA</string>
    <string name="add_to_change">AGREGAR AL VUELTO</string>
    <string name="accept_change">ACEPTAR VUELTO</string>
    <string name="pending_change">VUELTO PENDIENTE A RECIBIR: $</string>
    <string name="change_received_amount_zero">VUELTO RECIBIDO HASTA EL MOMENTO: $ 0.00</string>
    <string name="change_received">VUELTO RECIBIDO HASTA EL MOMENTO: $</string>
    <string name="purchase_finished">COMPRA FINALIZADA</string>
    <string name="dont_save_change">NO GUARDAR VUELTO</string>
    <string name="save_change">GUARDAR VUELTO</string>
    <string name="load_and_total_wallet_preview">CARGA: $  |  TOTAL EN BILLETERA: $</string>
    <string name="load_cash_sign">CARGA: $</string>
    <string name="total_cash_sign">TOTAL EN BILLETERA: $</string>
    <string name="add">AGREGAR</string>
    <string name="save_in_wallet">GUARDAR CARGA</string>
    <string name="new_currency_load">AGREGAR VALOR NUEVO</string>
    <string name="bill">BILLETE</string>
    <string name="coin">MONEDA</string>
    <string name="load_image">CARGAR IMAGEN</string>
    <string name="given_value">VALOR ASIGNADO</string>
    <string name="save_new_value">GUARDAR NUEVO VALOR</string>
    <string name="delete_existing_currency">ELIMINAR VALOR EXISTENTE</string>
    <string name="selected_value">SELECCIONADO: - </string>
    <string name="select_value">SELECCIONAR</string>
    <string name="confirm_delete">ELIMINAR</string>
    <string name="purchase_payed">COMPRA PAGADA</string>
    <string name="total_payment_of_the_purchase">PAGO TOTAL DE LA COMPRA: $</string>
    <string name="saved_money_pesos">DINERO EN BILLETERA: $</string>
    <string name="total_purchase">COMPRA TOTAL: $</string>
    <string name="value_0">0.00</string>
    <string name="tag_p5">t1_img_01_p5</string>
    <string name="tag_p5b">t1_img_02_p5b</string>
    <string name="tag_p10">t1_img_03_p10</string>
    <string name="tag_p10b">t1_img_04_p10b</string>
    <string name="tag_p20">t1_img_05_p20</string>
    <string name="tag_p20b">t1_img_06_p20b</string>
    <string name="tag_p50">t1_img_07_p50</string>
    <string name="tag_p50b">t1_img_08_p50b</string>
    <string name="tag_p100">t1_img_09_p100</string>
    <string name="tag_p100b">t1_img_10_p100b</string>
    <string name="tag_p200">t1_img_11_p200</string>
    <string name="tag_p500">t1_img_12_p500</string>
    <string name="tag_p1000">t1_img_13_p1000</string>
    <string name="tag_c5">t2_img_14_c5</string>
    <string name="tag_c10">t2_img_15_c10</string>
    <string name="tag_c25">t2_img_16_c25</string>
    <string name="tag_c50">t2_img_17_c50</string>
    <string name="tag_p1">t2_img_18_p1</string>
    <string name="tag_p1_b">t2_img_19_p1</string>
    <string name="tag_p2">t2_img_20_p2</string>
    <string name="tag_p5_b">t2_img_21_p5</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">CARGAR</string>
    <string name="tab_text_2">TENGO $</string>
    <string name="tab_text_3">COMPRAR</string>
    <string name="action_cancel">Cancelar acción actual</string>
    <string name="action_help">Ayuda</string>
    <string name="action_empty_wallet">Vaciar billetera&#8230;</string>
    <string name="action_configuration">Configuración</string>
    <string name="action_version_info">Información de la Versión</string>
    <string name="action_exit">Salir de la aplicación</string>
    <string name="wallet_fragment_title_help">Ayuda: CARGAR</string>
    <string name="wallet_fragment_help">> Elegir el valor deseado según la imagen y presionar el botón <b><u>[AGREGAR]</u></b>. Repetir para cargar varios valores. \nLuego presionar <b><u>[GUARDAR CARGA]</u></b> para ingresar en la billetera todos los valores elegidos. \n\n> Se puede cancelar la carga presionando <b>Cancelar acción actual</b> en el menú.</string>
    <string name="view_wallet_fragment_title_help">Ayuda: TENGO $</string>
    <string name="view_wallet_fragment_help">> Indica la cantidad total de dinero en la billetera y las imágenes de cada uno los valores</string>
    <string name="basket_fragment_title_help">Ayuda: COMPRAR &#8212; Ingresar productos</string>
    <string name="basket_fragment_help">> Ingresar el precio del producto en el teclado y presionar <b><u>[AGREGAR]</u></b> por cada uno de ellos. \nPresionar <b><u>[COMPRAR]</u></b> luego de ingresar todos los productos deseados. \n\n> Se puede cancelar toda la compra actual presionando <b>Cancelar acción actual</b> en el menú.</string>
    <string name="order_total_fragment_title_help">Ayuda: COMPRAR &#8212; Revisar total</string>
    <string name="order_total_fragment_help">> Revisar el valor total de la compra y luego presionar <b><u>[PAGAR COMPRA]</u></b> para presentar el pago. \n\n> Se puede cancelar toda la compra actual presionando <b><u>Cancelar acción actual</u></b> en el menú.</string>
    <string name="pay_purchase_fragment_title_help">Ayuda: COMPRAR &#8212; Pago</string>
    <string name="pay_purchase_fragment_help">> Revisar los valores mostrados en las imágenes y pagar con los valores guardados en la billetera. \nLuego de pagar, presionar <b><u>[COMPRA PAGADA]</u></b>. \n\n> Se puede cancelar toda la compra actual presionando <b>Cancelar acción actual</b> en el menú.</string>
    <string name="control_change_fragment_title_help">Ayuda: COMPRAR &#8212; Recibir vuelto</string>
    <string name="control_change_fragment_help">> Por cada valor de vuelto recibido, seleccionar su imagen y presionar <b><u>[AGREGAR AL VUELTO]</u></b>. \nAl terminar de recibir el vuelto presionar <b><u>[ACEPTAR VUELTO]</u></b>. \n\n> Se puede cancelar toda la compra actual presionando <b>Cancelar acción actual</b> en el menú.</string>
    <string name="finalize_purchase_fragment_title_help">Ayuda: COMPRAR &#8212; Finalizar</string>
    <string name="finalize_purchase_fragment_help">> En caso de recibir vuelto, se puede agregar el mismo a la billetera presionando el botón <b><u>[GUARDAR VUELTO]</u></b>. \nEn caso contrario presionar <b><u>[NO GUARDAR VUELTO]</u></b>. \n\n > En caso de no corresponder vuelto, directamente se habilitará el botón <b><u>[FINALIZAR COMPRA]</u></b>. \n\n> Se puede cancelar toda la compra actual presionando <b>Cancelar acción actual</b> en el menú.</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="msg_question_empty_wallet">¿Vaciar la billetera?</string>
    <string name="msg_confirm_wallet_empty">Confirme que desea vaciar todo el contenido de la billetera</string>
    <string name="msg_empty_wallet">Vaciar</string>
    <string name="msg_wallet_emptied">Billetera vaciada</string>
    <string name="pref_header_add_remove_value">Configuración de Valores en circulación (Billete/Moneda)</string>
    <string name="pref_key_add_value">add_value_preference</string>
    <string name="pref_title_add_value">Agregar Valor nuevo</string>
    <string name="pref_key_remove_value">remove_value_preference</string>
    <string name="pref_title_remove_value">Eliminar Valor existente</string>
</resources>