<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="proyectodane.usodeldinero.MainTabActivity">



    <group android:id="@+id/group_1">

        <item
            android:id="@+id/action_empty_wallet"
            android:orderInCategory="1"
            android:title="@string/action_empty_wallet"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_help"
            android:orderInCategory="2"
            android:title="@string/action_help"
            app:showAsAction="always"
            android:icon="@drawable/help"/>

    </group>

    <group android:id="@+id/group_2">

        <item
            android:id="@+id/action_cancel"
            android:orderInCategory="10"
            android:title="@string/action_cancel"
            app:showAsAction="never"/>


    </group>

    <group android:id="@+id/group_3">


        <item
            android:id="@+id/action_configuration"
            android:orderInCategory="100"
            android:title="@string/action_configuration"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_version_info"
            android:orderInCategory="101"
            android:title="@string/action_version_info"
            app:showAsAction="never" />

    </group>


    <group android:id="@+id/group_4">


        <item
            android:id="@+id/action_exit"
            android:orderInCategory="1000"
            android:title="@string/action_exit"
            app:showAsAction="never" />


    </group>


</menu>
