<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout_Basket"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <!-- Elementos dentro del CoordinatorLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BasketFragment">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/buy"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_purchase"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_money_pesos"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@id/priceProductText"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toTopOf="parent" />



        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/button_n1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_1"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_n2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_2"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_n3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_3"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/button_n4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_4"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_n5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_5"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_n6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_6"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/button_n7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_7"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_n8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_8"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_n9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_9"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp">


                <Button
                    android:id="@+id/button_n0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number_0"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_decimal_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/decimal_separator"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_erase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/erase_number"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/priceProductText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:hint="@string/value_money_zero"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>